Day58_Kubernetes_Ingress_LoadBalancing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
        - name: springboot-container
          image: your-dockerhub-username/springboot-app:latest
          ports:
            - containerPort: 8080
